fixes, plot prep

--- a/detect.ipynb
+++ b/detect.ipynb
@@ -254,7 +254,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 214
+          "height": 143
         },
         "id": "_N4w3xNYuB9n",
         "outputId": "93168e6d-68c2-44c6-e8d7-035e3bcd06e3"
@@ -526,6 +526,7 @@
         "from tqdm import tqdm\n",
         "from collections import defaultdict\n",
         "\n",
+        "\n",
         "@dataclass\n",
         "class TextEmbedding:\n",
         "    text: str\n",
@@ -623,18 +624,19 @@
         "        for token in doc:\n",
         "            features[f'pos_{token.pos_}'] += 1\n",
         "\n",
-        "        # ensure every possible POS tag is present\n",
-        "        all_pos_tags = set(self.nlp.get_pipe(\"tagger\").labels)\n",
-        "        for pos_tag in all_pos_tags:\n",
-        "            if f'pos_{pos_tag}' not in features:\n",
-        "                features[f'pos_{pos_tag}'] = 0\n",
+        "        # ensure every possible POS label is present\n",
+        "        all_labels = set(self.nlp.get_pipe(\"tagger\").labels)\n",
+        "        for label in all_labels:\n",
+        "            key = f\"pos_{label}\"\n",
+        "            if key not in features:\n",
+        "                features[key] = 0\n",
         "\n",
         "        total_tokens = len(doc)\n",
-        "        return {k: v / total_tokens for k, v in features.items() if total_tokens > 0}\n",
+        "        if total_tokens > 0:\n",
+        "            for k in features:\n",
+        "                features[k] /= total_tokens\n",
         "\n",
-        "        # Normalize features\n",
-        "        total_tokens = len(doc)\n",
-        "        return {k: v/total_tokens for k, v in features.items()}\n",
+        "        return dict(features)\n",
         "\n",
         "    def _get_dep_tree_depth(self, root) -> int:\n",
         "        \"\"\"Calculate dependency tree depth recursively.\"\"\"\n",
@@ -917,7 +919,7 @@
         "id": "Ox_ev0_q8mjr",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 866
+          "height": 1000
         },
         "outputId": "03a75ef3-3085-45ea-f97d-20dc0a64a31e"
       },
@@ -1000,7 +1002,7 @@
         "id": "M-1dVmqA8wp1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 382
+          "height": 365
         },
         "outputId": "86494dd1-d500-4377-fb89-134537067807"
       },
@@ -1032,6 +1034,28 @@
         "for i, score in enumerate(semantic_scores):\n",
         "    print(f\"Essay {i+1}: {score:.3f}\")\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# plotting semantic similarity\n",
+        "# a heatmap of similarity scores for pairwise comparisons.\n",
+        "# PCA plot of the embedding with the student essay in red, and the ai generated in blue, and something that highlights or shows the computed similarity in PCA"
+      ],
+      "metadata": {
+        "id": "OrLR3iaW5tD_"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "s4LgTbZZ5v4u"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1067,7 +1091,7 @@
         "id": "AukKMlbr-bAU",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 382
+          "height": 365
         },
         "outputId": "8b073725-043a-423b-f5b3-ac51cf98a7e9"
       },
@@ -1113,6 +1137,28 @@
         "plt.grid(True)\n",
         "plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# PCA plot of the embedding with the student essay in red, and the ai generated in blue, and something that highlights or shows the computed similarity in PCA"
+      ],
+      "metadata": {
+        "id": "uF8DQ8As6Q9D"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# scatter plot comparing semantic vs. syntactic similarity of the student essay vs the ai-generated essays"
+      ],
+      "metadata": {
+        "id": "SWoHpm-a54I5"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1307,6 +1353,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# bar charts or histograms to show the distribution of top words/phrases"
+      ],
+      "metadata": {
+        "id": "AcQHfOLu6ZNS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "4du15NMMVJRH"
@@ -1334,7 +1391,7 @@
         "id": "DhIKKV3v-42E",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 507
+          "height": 418
         },
         "outputId": "d8012cdd-c71c-40b1-ba7b-b898138c074c"
       },
@@ -1391,6 +1448,17 @@
         "    diff = ((ai_perplexity - student_perplexity) / student_perplexity) * 100\n",
         "    print(f\"AI essay {i+1} perplexity: {ai_perplexity:.2f} ({diff:+.1f}% vs student)\")\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# a grouped bar chart (student vs AI) makes it easy to see which ones are suspiciously low"
+      ],
+      "metadata": {
+        "id": "bSRnu1516gJw"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1565,6 +1633,18 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# radar/spider chart for multiple style features at once (avg word length, function-word ratio, etc.).\n",
+        "# box plots to compare distributions across essays."
+      ],
+      "metadata": {
+        "id": "YmfwGisk6oWq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "NmkIQANlVJRI"
@@ -1665,6 +1745,18 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# bar chart of average coherence per essay\n",
+        "# line chart to see progression across paragraphs/sentences"
+      ],
+      "metadata": {
+        "id": "4e4gISih6_da"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "l6iSuKh0_M2U"
@@ -1688,76 +1780,6 @@
         "\n",
         "Note: This complements other metrics since AI models may produce\n",
         "different word frequency patterns than human writers\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 24,
-      "metadata": {
-        "id": "y8sgW1dt_Ibo",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 376
-        },
-        "outputId": "cd991815-5b6a-4d97-c7af-1109afb34a8b"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt_tab is already up-to-date!\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "operands could not be broadcast together with shapes (534,) (314,) ",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-24-c1fed1cb5eb2>\u001b[0m in \u001b[0;36m<cell line: 22>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0messay\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0messay_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0mai_dist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_word_dist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0messay\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m     \u001b[0mtv_dist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_tv_distance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstudent_dist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mai_dist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m     \u001b[0mtv_distances\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtv_dist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"TV distance between student and AI essay {i+1}: {tv_dist:.3f}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-24-c1fed1cb5eb2>\u001b[0m in \u001b[0;36mget_tv_distance\u001b[0;34m(p, q)\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mq\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0;36m0.5\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m# get word frequency distributions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (534,) (314,) "
-          ]
-        }
-      ],
-      "source": [
-        "import nltk\n",
-        "nltk.download('punkt_tab')\n",
-        "from nltk.tokenize import word_tokenize\n",
-        "\n",
-        "# calculate Total Variation distance between the essay and the model outputs\n",
-        "def get_tv_distance(p, q):\n",
-        "    # normalize to probability distributions\n",
-        "    p = np.array(p) / np.sum(p)\n",
-        "    q = np.array(q) / np.sum(q)\n",
-        "    return 0.5 * np.sum(np.abs(p - q))\n",
-        "\n",
-        "# get word frequency distributions\n",
-        "def get_word_dist(text):\n",
-        "    words = word_tokenize(text.lower())\n",
-        "    counts = Counter(words)\n",
-        "    return [counts[w] for w in set(words)]\n",
-        "\n",
-        "# calculate TV distances\n",
-        "student_dist = get_word_dist(student_essay)\n",
-        "tv_distances = []\n",
-        "\n",
-        "for i, essay in enumerate(essay_list[1:]):\n",
-        "    ai_dist = get_word_dist(essay)\n",
-        "    tv_dist = get_tv_distance(student_dist, ai_dist)\n",
-        "    tv_distances.append(tv_dist)\n",
-        "    print(f\"TV distance between student and AI essay {i+1}: {tv_dist:.3f}\")\n",
-        "\n",
-        "# compare differences\n",
-        "print(\"\\nTV distance differences vs mean:\")\n",
-        "mean_tv = np.mean(tv_distances)\n",
-        "for i, dist in enumerate(tv_distances):\n",
-        "    diff = ((dist - mean_tv) / mean_tv) * 100\n",
-        "    print(f\"AI essay {i+1}: {diff:+.1f}% from mean\")\n",
-        "\n"
       ]
     },
     {
@@ -1824,11 +1846,11 @@
       ],
       "cell_type": "code",
       "metadata": {
-        "id": "7ZyHi6zEx50j",
-        "outputId": "c604a263-85d1-4388-a16b-db4db0cc338a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7ZyHi6zEx50j",
+        "outputId": "c604a263-85d1-4388-a16b-db4db0cc338a"
       },
       "execution_count": 25,
       "outputs": [
@@ -1867,6 +1889,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# bar chart for each essay’s TV distance from the student baseline\n",
+        "# radar chart if you’re comparing multiple distribution-based metrics side by side"
+      ],
+      "metadata": {
+        "id": "LJ0J_uCe7Jzg"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1912,7 +1946,7 @@
         "id": "tKVqKpYE_VWH",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 454
+          "height": 418
         },
         "outputId": "fc86dc03-fe36-41ec-c486-fd9d48309d80"
       },
@@ -1973,6 +2007,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# box plot for distribution of distances among perturbed versions (or bar chart of the mean discrepancy)."
+      ],
+      "metadata": {
+        "id": "xW6bzl6X7VGC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "OH0DpcjiVJRJ"
@@ -1987,7 +2032,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 510
+          "height": 474
         },
         "id": "kSSAA3rjVJRK",
         "outputId": "49d53f4d-85f0-4dfb-e061-126f565ea634"
