--- a/detect.ipynb
+++ b/detect.ipynb
@@ -59,7 +59,8 @@
       },
       "outputs": [],
       "source": [
-        "# !pip install flash-attn"
+        "%%capture\n",
+        "pip install flash-attn"
       ]
     },
     {
@@ -107,6 +108,7 @@
         "from collections import defaultdict\n",
         "import nltk\n",
         "import seaborn as sns\n",
+        "import random\n",
         "from nltk.tokenize import word_tokenize\n",
         "from google.colab import drive\n",
         "from google.colab import auth\n",
@@ -934,12 +936,14 @@
         "student_index = len(embeddings_3d) - 1\n",
         "for i in range(len(embeddings_3d) - 1):\n",
         "    # use syntactic_scores instead of similarity_matrix\n",
-        "    score = syntactic_scores[i]\n",
-        "    color = plt.cm.viridis(score)\n",
-        "    ax.plot([embeddings_3d[i, 0], embeddings_3d[student_index, 0]],\n",
-        "            [embeddings_3d[i, 1], embeddings_3d[student_index, 1]],\n",
-        "            [embeddings_3d[i, 2], embeddings_3d[student_index, 2]],\n",
-        "            color=color, alpha=0.7, linestyle='--', linewidth=2)\n",
+        "    # following line attempts to fix out of range similarity_matrix error\n",
+        "    if i < similarity_matrix.shape[0] and student_index < similarity_matrix.shape[1]:\n",
+        "        score = syntactic_scores[i]\n",
+        "        color = plt.cm.viridis(score)\n",
+        "        ax.plot([embeddings_3d[i, 0], embeddings_3d[student_index, 0]],\n",
+        "                [embeddings_3d[i, 1], embeddings_3d[student_index, 1]],\n",
+        "                [embeddings_3d[i, 2], embeddings_3d[student_index, 2]],\n",
+        "                color=color, alpha=0.7, linestyle='--', linewidth=2)\n",
         "\n",
         "ax.set_xlabel('PC1')\n",
         "ax.set_ylabel('PC2')\n",
@@ -2115,8 +2119,10 @@
         "student_dist = get_word_dist(student_essay)\n",
         "\n",
         "tv_distances = []\n",
+        "ai_dists = []\n",
         "for i, essay in enumerate(essay_list[1:]):\n",
         "    ai_dist = get_word_dist(essay)\n",
+        "    ai_dists.append(ai_dist)\n",
         "    all_words = set(student_dist.keys()).union(set(ai_dist.keys()))\n",
         "    tv_dist = get_tv_distance(student_dist, ai_dist, all_words)\n",
         "    tv_distances.append(tv_dist)\n",
@@ -2287,7 +2293,7 @@
         "\n",
         "\n",
         "# Plot using variables from previous cell\n",
-        "plot_tv_radar(student_dist, tv_distances, tv_diffs)"
+        "plot_tv_radar(student_dist, ai_dists, tv_distances)"
       ]
     },
     {
